--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -1123,3 +1123,19 @@ pre {
     display: inline-block;
   }
 }
+
+
+/* Support button in navbar */
+.navbar-custom .navbar-nav li.nav-item a[href*="https://buymeacoffee.com/rudeops"] {
+  color: hotpink;
+  transition: background 300ms, color 300ms;
+}
+.navbar-custom .navbar-nav li.nav-item a[href*="https://buymeacoffee.com/rudeops"]:hover {
+  background: hotpink;
+  color: #3344bb;
+}
+@media (min-width: 768px) {
+  .navbar-custom .navbar-nav .nav-item:not(.dropdown):last-child .nav-link {
+    padding-right: 1rem;
+  }
+}
